--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
     <li><a routerLink="/mykitchen">My kitchen</a></li>
     <li><a routerLink="/contact">Contact</a></li>
     <li><a routerLink="/login">Login</a></li>
+    <li><a routerLink="/admin">Administration</a></li>
   </ul>
 </nav>
 
