--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,15 +17,19 @@
         <h2><span>Sign</span> In</h2>
       </div>
       <div class="container mt-3">
+        <form #myForm="ngForm" novalidate (ngSubmit)="onSubmit(myForm)">
+
         <div class="form-group">
-          <input type="email" class="form-control" name="email" id="email" placeholder="Email" data-rule="email" data-msg="Please enter valid email" />
+          <input type="email" class="form-control" name="email" ngModel required email id="email" placeholder="Email" data-rule="email" data-msg="Please enter valid email" />
           <div class="validate"></div>
         </div>
+          
         <div class="form-group">
-          <input type="password" class="form-control" name="password" id="subject" placeholder="Password" data-rule="password" data-msg="Please enter at least 6 chars" />
+          <input type="password" class="form-control" name="password" ngModel required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).{6,12}$" id="subject" placeholder="Password" data-rule="password" data-msg="Please enter at least 6 chars" />
           <div class="validate"></div>
         </div>
-        <div class="text-center"><button type="submit">Sign in</button></div>
+        </form>
+        <div class="text-center"><button (click)="testLog()" type="submit" [disabled]="myForm.invalid" >Sign in</button></div>
       </div>
 
     </div>
