--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -874,6 +874,10 @@ section {
   animation: fadeIn 0.5s ease-out;
 }
 
+.btn-primary:hover  {
+  background: #ffb03b;
+}
+
 .specials .details h3 {
   font-size: 26px;
   font-weight: 600;
